# smart_car_chassis

./: .gitignore  .gitmodules  README.md
cmake/: build_for_arm.cmake  build_for_arm64.cmake  build_for_f1c100s.cmake  build_for_lichee_pi_zero.cmake  build_for_lubancat.cmake  build_for_mqpro.cmake  build_for_mqquad.cmake  build_for_mqquad_debian.cmake  build_for_orangepi_pc2.cmake  build_for_rk3308.cmake  build_for_v831.cmake
docs/: F1c100s_Car.md  Lichee_Pi_Zero.md  LubanCat_Zero_W.md  LubanCat_Zero_W_TWO_WHEEL.md  Mangopi_MQ_Pro.md  Mangopi_MQ_Pro_Two_wheel.md  Mangopi_MQ_Quad.md  Mangopi_MQ_Quad_Two_wheel.md  OrangePi_Pc2.md  Taishanpi_TWO_WHEEL.md  brcm_patchram_plus.c  brcm_patchram_plus1.c  bt_load_broadcom_firmware  friendlyarm_nanopi_neo.md  licheepizero_conf.json  lubancat_ubuntu_zero_w.json  lubancat_ubuntu_zero_w_two_wheel.json  lubancat_zero_w.json  mqpro_conf.json  mqpro_two_wheel_diff_model.json  mqquad_conf.json  rk3566-lubancat-0.dts  安装ROS2.md
docs/kicad/: linux-car.kicad_pcb  linux-car.kicad_sch  raspberry.kicad_pro
docs/kicad/h616/: raspberry.kicad_pcb  raspberry.kicad_sch
docs/kicad/rk3566/: rk3566.kicad_pcb  rk3566.kicad_pro  rk3566.kicad_sch
docs/设计模式/: 中介者模式.uml  亨元模式.uml  代理模式.uml  原型模式.uml  命令模式.uml  备忘录模式.uml  外观模式.uml  工厂方法模式.uml  抽象工厂模式.uml  模板方法模式.uml  状态模式.uml  策略模式.uml  组合模式.uml  装饰者模式.uml  观察者模式.uml  解释器模式.uml  访问者模式.uml  责任链模式.uml  迭代器模式.uml
src/chassis/: CMakeLists.txt  package.xml  package_ros1.xml
src/chassis/config/: chassis.xml
src/chassis/include/: interface.h
src/chassis/include/chassis/: chassis_service.h
src/chassis/launch/: ackerman_chassis.launch.py  ackerman_chassis_ld06.launch.py  ackerman_chassis_lds50c2.launch.py  chassis.launch.py  chassis_ld06_lidar.launch.py  chassis_ldlidar.launch.py  chassis_ydlidar.launch.py  opi5max_chassis.launch.py  slam_bluesea_lidar.launch.py  slam_ldlidar.launch.py  slam_ldlidar_ld06.launch.py  slam_ydlidar.launch.py  tspi_ldlidar.launch.py
src/chassis/params/: base_cfg.yaml  lubancat_ubuntu_zero_w.json  mqquad_cfg.yaml  mqquad_two_wheel_diff_model.json  opi5max_cfg.yaml  tspi_cfg.yaml
src/chassis/rviz/: chassis.rviz
src/chassis/scripts/: 99-hardware-conf.rules  luban_cat_two_wheel_setup.sh  mqquad_two_wheel_setup.sh  tspi_two_wheel_setup.sh
src/chassis/scripts/cat_ld06_start/: start_chassis.sh
src/chassis/scripts/cat_lds500c2_start/: chassis.service  start_chassis.sh
src/chassis/scripts/mqquad_start/: chassis.service  start_chassis.sh
src/chassis/scripts/tspi_ld06_start/: chassis.service  start_chassis.sh
src/chassis/src/: chassis_service.cpp  main.cpp
src/chassis/src/drivers/: comm_factory.h  gpio.cpp  gpio.h  gpio_chip.cpp  gpio_sysfs.cpp  gpio_sysfs.h  iic.h  led.h  pwm.cpp  pwm.h  serial.cpp  serial.h  spi.h
src/chassis/src/lib_json/: CMakeLists.txt
src/chassis/src/librtsp/: h264.cpp  h264.h  net.h  rtp.cpp  rtp.h  rtsp.h  rtsp_handler.cpp  rtsp_handler.h  rtsp_parse.cpp  rtsp_parse.h  tcp.cpp  udp.cpp  v4l2_rtsp.cpp  v4l2_rtsp.h
src/chassis/src/live_video/: G711AudioStreamServerMediaSubsession.cpp  G711AudioStreamServerMediaSubsession.hh  G711AudioStreamSource.cpp  G711AudioStreamSource.hh  H264FramedLiveSource.cpp  H264FramedLiveSource.hh  OnDemandRTSPServer.cpp  OnDemandRTSPServer.h
src/chassis/src/lora/: atk_lora_01.cpp  atk_lora_01.h  station_comm.cpp  station_comm.h  yl-800t.cpp  yl-800t.h
src/chassis/src/motion/: Kinematics.cpp  Kinematics.h  PidController.cpp  PidController.h  README.md
src/chassis/src/moto/: README.md  bts7960.cpp  bts7960.h  moto.cpp  moto.h  servo_moto.cpp  servo_moto.h
src/chassis/src/music/: music.cpp  music.h  recorder.cpp  recorder.h
src/chassis/src/protobuf/: CMakeLists.txt  SmartCar.proto
src/chassis/src/remote/: Gamepad.cpp  Gamepad.hpp  README.md  RemoteFactory.h  keyboard.cpp  keyboard.h  remote.h  sbus.cpp  sbus.h  socket.cpp  socket.h  sonnyps2.cpp  sonnyps2.h
src/chassis/src/sensor/: I2Cdev.hpp  README.md  gpio_key.cpp  gpio_key.h  gps.cpp  gps.h  iio_bus.cpp  iio_bus.h  rotary_encoder.cpp  rotary_encoder.h  srf04.cpp  srf04.h  video_source.h  vl53l0x.cpp  vl53l0x.h  ydlidars4.cpp  ydlidars4.h
src/chassis/src/sensor/H264_camera/: H264_UVC_Cap.cpp  H264_UVC_Cap.h  debug.h  h264_xu_ctrls.cpp  h264_xu_ctrls.h
src/chassis/src/sensor/audio_source/: README.md  audio_encode.cpp  audio_encode.h
src/chassis/src/sensor/camera/: h264_camera.cpp  h264_camera.h
src/chassis/src/sensor/imu_modules/: atk_ms901m.cpp  atk_ms901m.h  imu_interface.h  mpu6050.cpp  mpu6050.h  mpu9250.cpp  mpu9250.h  zyf176ex.cpp  zyf176ex.h
src/chassis/src/sensor/mpu9250/: driver_mpu9250_interface.cpp
src/chassis/src/utils/: RecordData.cpp  RecordData.h  circular_queue.h  jsonparse.cpp  jsonparse.h  loadconfig.cpp  loadconfig.h  select.cpp  select.h  utils.cpp  utils.h  wifi.cpp  wifi.h  xepoll.cpp  xinotify.cpp  xinotify.h
src/fishbot_cartographer/config/: fishbot_laser_2d.lua
src/fishbot_cartographer/launch/: cartographer.launch.py
src/fishbot_description/launch/: ackerman_rviz2.launch.py
src/fishbot_description/rviz/: fish_bot.rviz
src/fishbot_description/urdf/: ackerman.urdf
src/ldlidar_stl_ros2/: CMakeLists.txt  package_ros1.xml
src/ldlidar_stl_ros2/include/: ros2_api.h
src/ldlidar_stl_ros2/launch/: ld06.launch.py  ld19.launch.py
src/ldlidar_stl_ros2/params/: ldlidar_ld06.yaml  ldlidar_ld19.yaml
src/ldlidar_stl_ros2/src/: demo.cpp
src/ydlidar_ros2/: CMakeLists.txt  package_ros1.xml
src/ydlidar_ros2/launch/: tg15_ydlidar_launch.py  ydlidar_launch.py
src/ydlidar_ros2/params/: tg15.yaml  ydlidar.yaml
src/ydlidar_ros2/sdk/include/: help_info.h  v8stdint.h
src/ydlidar_ros2/sdk/src/impl/unix/: list_ports_linux.cpp
src/ydlidar_ros2/src/: ydlidar_client.cpp  ydlidar_node.cpp
src/ydlidar_ros2/startup/: 70-ydlidar.rules
